testsuite/tests/parsing/constructor_declarations.compilers.reference
File "constructor_declarations.ml", line 24, characters 2-3:
24 |   | A of int
       ^
Error: Syntax error
